<resources>
    <string name="app_name">Android Jetpack Demos</string>
    <string name="action_settings">Settings</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>

    <string name="main_activity_title">Kotlin Coroutines + Android Arch Components Demos</string>
    <string name="enter_word_title">Enter Word</string>

    <string name="bounce_animation_activity_title">Bounce Animation Demo</string>
    <string name="my_test_activity_title">My Test Demo</string>
    <string name="lottie_activity_title">Lottie Animation Demo</string>
    <string name="shimmer_effect_activity_title">Shimmer Effect Demo</string>
    <string name="sqldelight_activity_title">SQLDelight Demo</string>
    <string name="camerax_activity_title">CameraX Demo</string>
    <string name="behavior_activity_title">Behavior</string>
    <string name="other_activity_title">Other Important Things</string>
    <string name="network_lib_activity_title">Network Libs</string>
    <string name="android_pattern_activity_title">Android Patterns</string>
    <string name="architecture_activity_title">Architecture</string>
    <string name="room_activity_title">Android Room Demo</string>
    <string name="mvvm_activity_title">MVVM Demo</string>
    <string name="mvvm_data_binding_activity_title">MVVM + Data Binding Demo</string>
    <string name="livedata_activity_title">LiveData Demo</string>
    <string name="lifecycle_activity_title">LifeCycle Demo</string>
    <string name="viewmodel_activity_title">ViewModel + LiveData Demo</string>
    <string name="databinding_activity_title">Data Binding Demo</string>
    <string name="workmanager_activity_title">WorkManager Demo</string>
    <string name="coroutine_activity_title">Coroutines Demo</string>
    <string name="motion_activity_title">Motion Layout Demo</string>
    <string name="retrofit_activity_title">ViewModel + LiveData + Retrofit Demo</string>
    <string name="mvp_activity_title">MVP Demo</string>
    <string name="mvc_activity_title">MVC Demo</string>
    <string name="location_activity_title">Location Demo</string>
    <string name="app_updates_activity_title">In AppUpdates Demo</string>
    <string name="navigation_activity_title">Navigation Demo</string>
    <string name="rxjava_activity_title">RxJava Demo</string>
    <string name="auto_size_textview_activity_title">AutoSize TextView Demo</string>
    <string name="firebase_activity_title">FireBase Remote Config Demo</string>

    <string name="button_download_img">Download Image</string>
    <string name="button_download_song">Download Song</string>
    <string name="button_camerax">CameraX</string>

    <string name="button_behaviour">Behavior</string>
    <string name="button_pattern">Android Patterns</string>
    <string name="button_architecture">Architecture</string>
    <string name="button_room">Android Room</string>
    <string name="button_mvp">MVP</string>
    <string name="button_mvc">MVC</string>
    <string name="button_mvvm">MVVM</string>
    <string name="button_livedata">LiveData</string>
    <string name="button_lifecycle">LifeCycle</string>
    <string name="button_viewmodel">ViewModel + LiveData</string>
    <string name="button_databinding">Data Binding - 1</string>
    <string name="button_databinding2">Data Binding - 2</string>
    <string name="button_workmanager">Work Manager</string>
    <string name="button_coroutins">Coroutines</string>
    <string name="button_motion">Motion Layout</string>
    <string name="button_retrofit">ViewModel + LiveData + Retrofit</string>
    <string name="button_retrofit2">ViewModel + LiveData + Retrofit + Sealed Class</string>
    <string name="button_location">Location</string>
    <string name="button_app_updates">In App Updates</string>
    <string name="button_navigation">Navigation</string>
    <string name="button_rxjava_demo">RxJava Demo</string>
    <string name="button_network">Network Libs</string>
    <string name="button_other">Other things</string>
    <string name="button_shimmer">Shimmer Effect</string>
    <string name="button_auto_textview_size">TextView AutoSize</string>
    <string name="button_firebase">Firebase Remote Config</string>
    <string name="button_sql_delight">SQLDelight</string>
    <string name="button_lottie_animation">Lotti Animation</string>
    <string name="button_my_test">My Test</string>
    <string name="button_bounce_anim">Bounce Animation</string>
    <string name="button_so">SO</string>

    <string name="button_mvvm_data_binding">MVVM + Data Binding</string>

    <string name="button_get_post">Get Posts</string>
    <string name="button_get_movies">Get Movies</string>

    <string name="next">Next Screen</string>
    <string name="image">Random city image</string>
    <string name="change">Change Weather Property</string>
    <string name="capture">Take Photo</string>

    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
    <string name="toast">Show Toast</string>
    <string name="yellow_star">Yellow star</string>
    <string name="name">Aleks Haecky</string>

    <string name="bio">Hi, my name is Aleks.
\n\nI love fish.
\n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
\nFun fact is that I have several aquariums and also a river.
\n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
\nAnd sometimes I even go fishing.
\nAnd even less sometimes, I actually catch something.
\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
\n\nI\'ll be happy to teach you how to make your own aquarium.
\nYou should ask someone else about fishing, though.\n\n</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_mindorks">Hello Mindorks!!</string>
</resources>
